fix layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -25,27 +25,7 @@ body {
 
 #root {
   max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
-}
-
-.guess-tile {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.guess-tile p {
-  font-weight: bold;
-}
-
-.guess-tile-correct {
-  background-color: #385 !important;
-}
-
-.guess-tile-close {
-  background-color: #ba2 !important;
 }
